kube/bitcoincash-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: bitcoincash
  namespace: default
spec:
  ports:
    - port: 89
      targetPort: 80
  selector:
    service: bitcoincash
  type: NodePort
