kube/bitcoincash-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bitcoincash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - www.bitcoincash.org
    - bitcoincash.org
    secretName: wwwbitcoincash-tls
  backend:
    serviceName: bitcoincash
    servicePort: 89
  rules:
  - host: bitcoincash.org
    http:
      paths:
      - path: /
        backend:
          serviceName: bitcoincash
          servicePort: 89
  - host: www.bitcoincash.org
    http:
      paths:
      - path: /
        backend:
          serviceName: bitcoincash
          servicePort: 89
